--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mysql": "^2.14.1",
     "restify": "^5.2.0",
     "restify-cors-middleware": "^1.0.1"
+  },
+  "dependencies": {
+    "n": "^2.1.8"
   }
 }
